--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ authors = ["tuome <tonni@tuta.io>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
+pyside6 = "^6.6.0"
+pytest = "^7.4.3"
+black = "^23.11.0"
+pylint = "^3.0.2"
 
 
 [build-system]
