--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 pyside6 = "^6.6.0"
-pytest = "^7.4.3"
-black = "^23.11.0"
-pylint = "^3.0.2"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.11.0"
+pytest = "^7.4.3"
+pylint = "^3.0.2"
+coverage = "^7.3.2"
 
 [build-system]
 requires = ["poetry-core"]
