--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pygame = "^2.5.2"
+invoke = "^2.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.1.1"
+coverage = "^7.4.4"
 
 [build-system]
 requires = ["poetry-core"]
