--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 invoke = "^2.2.0"
 python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.29"
+bcrypt = "^4.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
