--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ invoke = "^2.2.0"
 python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.29"
 bcrypt = "^4.1.2"
+matplotlib = "^3.8.4"
 
 
 [tool.poetry.group.dev.dependencies]
