--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.29"
 bcrypt = "^4.1.2"
 matplotlib = "^3.8.4"
+tkcalendar = "^1.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
