--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^8.1.1"
 coverage = "^7.4.4"
 pylint = "^3.1.0"
 autopep8 = "^2.1.0"
+black = "^24.4.0"
 
 [build-system]
 requires = ["poetry-core"]
